--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 padding: 0;
 box-sizing: border-box;}
 
-    main{
+    main{max-width: 1440px;
         
         margin: 0 auto;
     }
@@ -168,7 +168,10 @@ bottom:55%;
     ); }
     .second-text h1 {color: burlywood;
     text-align: center;
+    
 padding: 40px 30px;}
+.second-text p{color: #fff;
+text-align: center;}
     
     .second-img{display: flex;
        
@@ -181,7 +184,51 @@ text-align: center;}
     border: none;
     border-radius:50%;
 }
+.run-total{background-color: #000;
+    background-image: linear-gradient(
+    to bottom,
+      rgba(17, 17, 17, 1) 0%,
+      rgb(119, 119, 119, 0) 20%,f
+     
+      rgba(17, 17, 17, 1) 50%
+    );
+padding:50px 75px;
+}
+.run{display: flex;
+  padding:30px 60px;
+  border: 4px solid #fff;
+  background-color:rgb(70, 68, 68);
+gap: 4rem;
+margin-right:55px;
+margin-left:90px;
+border: none;
+border-radius:20px ;
+ }
 
+
+    
+
+    
+    
+
+.run-text{display: flex;
+    flex-direction: column;
+    row-gap: 1rem;
+    
+    margin-left: 60px;
+    padding: 5px 20px;
+    
+}
+.run-text h1{color: burlywood;
+font-size: 36px;
+
+}
+.run-image img{width: 360px;
+        height:300px;
+    border: none;
+border-radius:20px;
+margin-left: 190px;
+}
 
 
 
