--- a/style.css
+++ b/style.css
@@ -228,7 +228,8 @@ font-size: 36px;
 font-weight: 900;
 
 }
-.run-text p{color: #fff;}
+.run-text p{color: #fff;
+font-size: 18px;}
 .run-image img{width: 360px;
         height:300px;
     border: none;
@@ -241,6 +242,82 @@ padding: 8px 30px;
 width: 200px;
 border: none;
 border-radius:20px ;}
+.trainer
+{background-color: #000;
+    background-image: linear-gradient(
+    to bottom,
+      rgba(17, 17, 17, 1) 0%,
+      rgb(119, 119, 119, 0) 20%,f
+      rgba(17, 17, 17, 1) 50% );
+   ;}
+ .border{width:880px;
+   
+    /* border: 4px solid red; */
+}
+
+.meet-img{
+    margin:20px 90px;
+    padding: 30px 70px;
+    margin-left: 50px;
+}
+  .border{
+    margin-left:15%;
+    padding:10px 15px;
+    background-color: rgb(65, 61, 61);
+    border-radius:25px ;
+  }  
+    
+   
+    
+    
+
+ 
+.meet-man h1{
+    color: rgb(230, 159, 67);
+font-size: 36px;
+font-weight: 900;
+text-align: center;}
+.row{display:flex;
+}
+.meet-man p{
+    color: #fff;
+text-align: center;
+font-size:20px;
+margin-top: 10px;
+/* gap:18px; */
+
+/* padding: 40px 70px; */
+margin-left:20px ;}
+
+.row-one{
+    display: flex;
+    margin: 1rem 0;
+
+    gap: 1rem;
+    margin-left:40px;
+
+   
+}
+.row-two{
+    display: flex;
+    gap: 1rem;
+
+    margin-left:40px;
+   
+}
+.member img{
+   
+    height:400px;
+    width: 250px;
+   
+    border-radius:25px
+}
+
+
+
+
+    
+
 
 
        
@@ -255,8 +332,4 @@ border-radius:20px ;}
         
     
 
-        
-        
-    
-
-    
+          
