--- a/style.css
+++ b/style.css
@@ -288,7 +288,8 @@ h3 {
 
 .run {
     display: flex;
-    padding: 30px 60px;
+   padding: 30px 55px;
+   padding-left:35px;
     border: 4px solid #fff;
     background-color: rgb(70, 68, 68);
     gap: 4rem;
@@ -296,6 +297,8 @@ h3 {
     margin-left: 90px;
     border: none;
     border-radius: 20px;
+    width: 980px;
+    height: 450px;
 }
 
 
@@ -311,6 +314,7 @@ h3 {
     margin-top: 30px 50px;
     margin-left: 60px;
     padding: 5px 20px;
+    margin-bottom:35px;
 
 }
 
@@ -327,7 +331,7 @@ h3 {
 }
 
 .run-image img {
-    width: 360px;
+    width: 300px;
     height: 300px;
     border: none;
     border-radius: 20px;
@@ -341,6 +345,8 @@ h3 {
     width: 200px;
     border: none;
     border-radius: 20px;
+    margin-bottom: 10px;
+    margin-right: 30px;
 }
 
 
@@ -404,10 +410,10 @@ h3 {
     margin: 1rem 0;
 
     gap: 1rem;
-    margin-left: 40px;
+    margin-left: 40px;}
 
 
-}
+
 
 .row-two {
     display: flex;
@@ -738,4 +744,68 @@ margin-top:5px;}
     margin-top:45px;
     display: flex;
     
-}
+}                                                                       
+
+
+@media screen and (max-width:600px) {
+    .menu{
+        display: block;
+        margin-right:30px;
+
+    }
+    .menu img{
+        width: 20px;
+        height: 20px;
+    }
+    .nav-options{
+        display: none;
+    }
+    text-btn{
+        
+
+    }
+    .total{
+        flex-direction: column;
+    }
+    .second-img{
+        flex-direction: column;
+    }
+    .run{
+        width:400px;
+        height:700px;
+     
+        flex-direction: column;
+
+        padding: 10px 30px;
+    }
+
+    .run-text h1{
+        font-size: 20px;
+        margin-top: 30px;
+        
+    }
+    .run-text p{
+        font-size: 16px;
+        padding-left:30px;
+    }
+    .run-text{
+        margin-left: 10px;
+
+    }
+    
+      .run-image img{
+        width:300px;
+    height:200px;
+margin-left: 10px;
+padding-bottom:45px;
+border-radius:15px ;}
+       
+     
+
+ 
+    
+      
+      } 
+        
+    
+    
