--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
 
 
 
@@ -185,7 +185,7 @@
     align-items: center;
     width: 140px;
     height: 80px;
-    margin-left:65%;}
+    margin-left:172%;}
     
 
 
@@ -220,7 +220,7 @@
 .text-btn {
     position: absolute;
     top: 55%;
-    right:165%;
+   right:120%;
 }
 
 .go {
@@ -234,7 +234,7 @@
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
 }
 
 .second-text h1 {
@@ -282,7 +282,7 @@ h3 {
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
     padding: 20px 40px;
 }
 
@@ -356,7 +356,7 @@ h3 {
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
     
 }
 
@@ -371,12 +371,16 @@ h3 {
 }
 
 .border {
-    margin-left: 15%;
-    margin-right: 10%;
-    padding: 10px 15px;
+    width:880px;
+    margin-right:30%;
+    padding: 20px 10px;   
+
+ 
+  
+  
     background-color: rgb(65, 61, 61);
-    border-radius: 25px;
-}
+    border-radius: 25px;}
+
 
 
 
@@ -434,9 +438,9 @@ h3 {
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
-            /* margin:-30px;
-    */
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
+            
+    
 }  
 .equipment h1{
     color: rgb(114, 51, 6);
@@ -484,8 +488,8 @@ instrument-img h3{
     padding: 10px 50px;
     text-align: center;
 }
-.et-4{.
-    padding: 10px 50px;
+.et-4 {
+    padding:  10px 50px;
     text-align: center;}
 
 .footer-class {
@@ -556,7 +560,7 @@ instrument-img h3{
     background-color: #000;
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
-            rgb(119, 119, 119, 0) 20%, f rgba(17, 17, 17, 1) 50%);
+            rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
 }
 
 .bmi-calculator p {
@@ -577,6 +581,7 @@ instrument-img h3{
 .flex {
 
     display: flex;
+ 
     /* border:1px solid red; */
     width: 400px;
     margin-right: 65%;
@@ -587,8 +592,8 @@ instrument-img h3{
 .item {
     border: 1px solid black;
     text-align: center;
-    text-color: #fff;
-}
+    text-color: #fff;}
+
 
 .item h4 {
     color: rgb(215, 43, 43);
@@ -614,13 +619,18 @@ instrument-img h3{
 
 .total-bmi{
     display: flex;
+   
     border: 1px solid red;
-    width:1060px;
+    width:980px;
     height:500px;
     background-color: rgb(20, 50, 52);
     border: none;
     border-radius: 18px;
     margin-top: 40px;
+    .flex1{
+        display: flex;
+       
+    }
   
 }
 .total-calcu h3{
@@ -760,10 +770,12 @@ margin-top:5px;}
     .nav-options{
         display: none;
     }
-    text-btn{
+    .text-btn{
+        margin-left:80%;}
+     
         
 
-    }
+    
     .total{
         flex-direction: column;
     }
@@ -799,13 +811,101 @@ margin-top:5px;}
 margin-left: 10px;
 padding-bottom:45px;
 border-radius:15px ;}
-       
+.bmi-calculator h1{
+    font-size: 26px;
+}
+.bmi-calculator p{
+    font-size: 12px;
+}
+.total-bmi{
+    flex-direction: column;
+    width:500px;
+    height: 780px;
+
+}
+.flex1{
+    flex-direction: column;
+  
+
+
+}
+  
      
+     .Calculate-input{
+       margin-right:60%;
+     
+      
+     }
+.input-class{
+    margin-right:60%;
+
+}
+.input-button{
+    margin-bottom:20px;
+}
+
+.meet h1{
+    font-size: 26px;
+}
+.meet p{
+        font-size: 16px;
+}
+
+.row-one{
+    flex-direction: column;
+}
+.row-two{
+    flex-direction: column;
+}
+.border{
+    width: 400px;
+    margin-right:50%;
+    
+}
+.equipment h1{
+    font-size: 26px;
+
+}
+.equipment p{
+    font-size: 16px;
+}
+.instrument-img{
+    grid-template-columns:repeat(1,1fr);
+}
+.et-4 .et-btn{
+    margin-bottom: 30px;
+}
+.instrument-video video{
+    width: 200px;
+}
+
+.footer{
+    flex-direction: column;
+  
+} 
+.footer p{
+    font-size:14px;
+}
+.fitness{
+    margin-left: 10px;
+}
+.fitness-one{
+    margin-left:10px;
+    margin-top: 20px;
+}
+
+.fitness-two{
+    margin-left: 10px;
+    margin-top: 20px;
+}
+}
+     
+
 
  
     
       
-      } 
+      
         
     
     
