--- a/style.css
+++ b/style.css
@@ -372,7 +372,8 @@ h3 {
 
 .border {
     width:880px;
-    margin-right:30%;
+    margin-right:40%;
+    margin-left: 10%;
     padding: 20px 10px;   
 
  
