--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 * {
-    max-width: 1440px;
+    max-width:1240px;
     margin: 0 auto;
 
 }
@@ -220,7 +220,7 @@
 .text-btn {
     position: absolute;
     top: 55%;
-   right:120%;
+   right:140%;
 }
 
 .go {
@@ -235,6 +235,7 @@
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
             rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
+            
 }
 
 .second-text h1 {
@@ -284,6 +285,7 @@ h3 {
             rgba(17, 17, 17, 1) 0%,
             rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
     padding: 20px 40px;
+   
 }
 
 .run {
@@ -357,6 +359,7 @@ h3 {
     background-image: linear-gradient(to bottom,
             rgba(17, 17, 17, 1) 0%,
             rgb(119, 119, 119, 0) 20%, rgba(17, 17, 17, 1) 50%);
+           
     
 }
 
@@ -428,6 +431,23 @@ h3 {
 
 }
 
+.member{
+    position: relative;
+}
+.tt{
+    position: absolute;
+    bottom:15%;
+    left: 10px;
+    color:rgb(203, 54, 27)
+}
+
+
+.tt-2{
+    position: absolute;
+    bottom:5%;
+    left: 10px;
+    color: #fff;
+}
 .member img {
 
     height:200px;
@@ -671,10 +691,10 @@ instrument-img h3{
     grid-template-columns: repeat(2,1fr);
     margin-right:40px;
  }
-    
+/*     
   .last{
     display:flex;
-  }
+  } */
 
 .input-class{
     margin-bottom:10px;
@@ -758,10 +778,11 @@ margin-top:5px;}
 }                                                                       
 
 
-@media screen and (max-width:600px) {
+@media screen and (max-width:576px) {
+    
     .menu{
         display: block;
-        margin-right:30px;
+        /* margin-right:30px; */
 
     }
     .menu img{
@@ -771,25 +792,54 @@ margin-top:5px;}
     .nav-options{
         display: none;
     }
-    .text-btn{
-        margin-left:80%;}
-     
+    .buttons{
+        padding: 5px 10px;
+        margin-left: 5px;
+    }
+      .text-content h3{
+        font-size:20px;
+        margin-left:35px;
+      }
+    .text-content p{
+        font-size:12px;
+        padding :10px 30px;
+    } 
         
 
     
     .total{
         flex-direction: column;
     }
+
+    .second-text h1{
+        font-size: 26px;
+        font-weight:700;
+    }
     .second-img{
         flex-direction: column;
+       margin-right:40%;
+       width: 400px;
+    }
+    .second-img p{
+        font-size:10px ;
+    }
+    .second-img h3{
+        font-size: 18px;
+    }
+    .second-text p{
+        font-size: 10px;
+        padding: 10px 40px;
+
     }
     .run{
-        width:400px;
-        height:700px;
+        width:300px;
+        height:600px;
      
         flex-direction: column;
 
         padding: 10px 30px;
+       
+        
     }
 
     .run-text h1{
@@ -797,8 +847,9 @@ margin-top:5px;}
         margin-top: 30px;
         
     }
+    
     .run-text p{
-        font-size: 16px;
+        font-size: 12px;
         padding-left:30px;
     }
     .run-text{
@@ -807,49 +858,76 @@ margin-top:5px;}
     }
     
       .run-image img{
-        width:300px;
+        width:250px;
     height:200px;
 margin-left: 10px;
 padding-bottom:45px;
 border-radius:15px ;}
 .bmi-calculator h1{
-    font-size: 26px;
+    font-size: 20px;
 }
 .bmi-calculator p{
     font-size: 12px;
 }
 .total-bmi{
     flex-direction: column;
-    width:500px;
-    height: 780px;
+    width:400px;
+    height: 680px;
+
+}
+.total-calcu h3{
+    font-size: 20px;
 
 }
 .flex1{
-    flex-direction: column;
+    flex-direction:column;
+    
   
 
 
 }
-  
+.Calculate-input h3{
+    font-size: 20px;
+}
+.Calculate-input p{
+    font-size: 12px;
+}  
      
-     .Calculate-input{
-       margin-right:60%;
-     
-      
-     }
-.input-class{
-    margin-right:60%;
+.calculate-input select 
 
+.ff h1{
+font-size: 18px;
+}
+
+
+.flex1{
+    width:200px;
+}
+.Calculate-input{
+    width:250px;
+    margin-right: 30px;
+
+  
+}
+.input-class input{
+    width:70px;
+    height:20px;
+    margin-right:30px;
+}
+.input-class select{
+    width:90px;
+    height: 20px;
+    margin-right: 20px;
 }
 .input-button{
     margin-bottom:20px;
 }
 
-.meet h1{
-    font-size: 26px;
+.meet-man h1{
+    font-size: 20px;
 }
-.meet p{
-        font-size: 16px;
+.meet-man p{
+        font-size: 12px;
 }
 
 .row-one{
@@ -859,19 +937,27 @@ border-radius:15px ;}
     flex-direction: column;
 }
 .border{
-    width: 400px;
-    margin-right:50%;
+    width:300px;
+    
+    /* margin-right:60%;
+    /* margin-right:60px; */
+    /* padding: 20px 10px; */ 
+}
+
+.meet-img{
+    padding: 10px 30px;
     
 }
-.equipment h1{
-    font-size: 26px;
+.instrument h1{
+    font-size: 20px;
 
 }
-.equipment p{
-    font-size: 16px;
+.instrument p{
+    font-size: 12px;
 }
 .instrument-img{
     grid-template-columns:repeat(1,1fr);
+    width: 400px;
 }
 .et-4 .et-btn{
     margin-bottom: 30px;
@@ -879,7 +965,9 @@ border-radius:15px ;}
 .instrument-video video{
     width: 200px;
 }
-
+ .ff{
+    font-size: 20px;
+ }
 .footer{
     flex-direction: column;
   
