--- a/style.css
+++ b/style.css
@@ -295,14 +295,16 @@ h3 {
     border: 4px solid #fff;
     background-color: rgb(70, 68, 68);
     gap: 4rem;
-    margin-right: 55px;
-    margin-left: 90px;
+   
+    /* margin-left: 90px; */
     border: none;
     border-radius: 20px;
-    width: 980px;
+    width: 880px;
     height: 450px;
 }
-
+.run{
+   
+}
 
 
 
@@ -338,7 +340,10 @@ h3 {
     border: none;
     border-radius: 20px;
     margin-top: 30px;
-    margin-left: 190px;
+    /* margin-left: 190px; */
+}
+.run-image{
+    margin-left: 20px;
 }
 
 .join {
@@ -400,6 +405,7 @@ h3 {
 
 .row {
     display: flex;
+    flex-direction: row;
 }
 
 .meet-man p {
@@ -777,7 +783,8 @@ margin-top:5px;}
 
 
 @media screen and (max-width:576px) {
-    
+     
+     
     .menu{
         display: block;
         /* margin-right:30px; */
@@ -792,12 +799,12 @@ margin-top:5px;}
     }
     .buttons{
         padding: 5px 10px;
-        margin-left: 40px;
+        margin-left: 40px;}
 
         .btn-c{
             margin-bottom:15px;
         }
-    }
+    
       .text-content h3{
         font-size:20px;
         margin-left:35px;
@@ -850,7 +857,7 @@ margin-top:5px;}
         flex-direction: column;
 
         padding: 10px 30px;
-        margin-right:20px;
+        /* margin-right:40px; */
     
        
         
@@ -858,7 +865,9 @@ margin-top:5px;}
 
     .run{
         width:300px;
-       margin-left:10px;
+       
+       margin-right:30px;
+       /* margin-right:8px; */
       padding: 10px 18px;
     }
     .run-text{
@@ -896,8 +905,9 @@ padding-bottom:45px;
 border-radius:15px ;}
 
 .bmi-calculator{
-    padding: 20px 15px;
+    margin-right: 20px;
 }
+    
 .bmi-calculator h1{
     font-size: 20px;
 }
@@ -915,7 +925,7 @@ border-radius:15px ;}
     width: 380px;
 }
 
-}
+
 .total-bmi{
     margin-left: 10px;
 }
@@ -1016,15 +1026,14 @@ font-size: 18px;
     width: 400px;
 }
 
-.flex1{
-    width: auto;
+
    
-}
+
  .ff{
     font-size: 20px;
  }
 .footer{
-    flex-direction: column;
+    flex-direction:column;
   
 } 
 .footer p{
@@ -1041,7 +1050,9 @@ font-size: 18px;
 .fitness-two{
     margin-left: 10px;
     margin-top: 20px;
-}
+} }
+
+
 
      
 
